| Summary: | ASTERISK-25548: stasis: Improve message type "Use of before init/after destruction" error | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-11-12 10:40:56.000-0600 | Date Closed: | 2018-07-18 14:09:13 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Stasis |
| Versions: | 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When explicitly disabling a Stasis message type the under initialization of the type is blocked. If this is subsequently used while dev mode is on then a "Use of before init/after destruction" error message is output. When the message type is explicitly disabled this error message is a red herring and not useful. The message should either be removed or be aware that the type has explicitly been disabled. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-07-18 14:09:17.040-0500 Change 9512 merged by George Joseph: stasis: Improve message type "Use of before/init after destruction" [https://gerrit.asterisk.org/9512|https://gerrit.asterisk.org/9512] By: Friendly Automation (friendly-automation) 2018-07-18 14:09:44.088-0500 Change 9513 merged by George Joseph: stasis: Improve message type "Use of before/init after destruction" [https://gerrit.asterisk.org/9513|https://gerrit.asterisk.org/9513] By: Friendly Automation (friendly-automation) 2018-07-18 14:09:57.746-0500 Change 9511 merged by George Joseph: stasis: Improve message type "Use of before/init after destruction" [https://gerrit.asterisk.org/9511|https://gerrit.asterisk.org/9511] | ||